tests_bucklescript/__snapshots__/Error_Template_missingField_re.3e550a8c.0.snapshot
Error Template › missingField3.re › output
File \"tests_bucklescript/operations/errors/missingField3.re\", line 15, characters 6-18:
15 |       doesNotExist
           ^^^^^^^^^^^^
Error: Unknown field 'doesNotExist' on type Lists

  We've found a bug for you!
  /Users/Jaap/Documents/development/graphql-ppx/tests_bucklescript/operations/errors/missingField3.re
  
  Error while running external preprocessor
